--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
     "registry:build": "shadcn build"
   },
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
-    "next": "15.5.2",
+    "motion": "^12.23.25",
+    "next": "16.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "shadcn": "^3.0.0",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.6",
+    "shadcn": "^3.5.1",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20.19.9",
+    "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^20.19.25",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
-    "eslint": "^9.32.0",
+    "eslint": "^9.39.1",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.2"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3"
   },
   "pnpm": {
     "overrides": {
